--- a/journals/2022_08_03.md
+++ b/journals/2022_08_03.md
@@ -1,6 +1,6 @@
-- LATER Japanese L25
+- DONE Japanese L25
   DEADLINE: <2022-08-06 Sat>
   SCHEDULED: <2022-08-05 Fri>
-- LATER Korean L8
+- DONE Korean L8
   DEADLINE: <2022-08-12 Fri>
   SCHEDULED: <2022-08-06 Sat>
