--- a/journals/2022_08_12.md
+++ b/journals/2022_08_12.md
@@ -1,9 +1,70 @@
 - 111-1 課程安排
+  collapsed:: true
 	- 修業規定
+	  collapsed:: true
 		- [電機工程學系學生選課注意事項](https://www.ee.ntu.edu.tw/eeoffice/download/News/2208091401081.pdf)
 		- [系訂選修](https://www.ee.ntu.edu.tw/upload/workbench/files/1101110.pdf)
 		- [臺⼤電機系⼤學部課程學分表](https://www.ee.ntu.edu.tw/upload/workbench/files/eecourse_1090506.pdf)
 	- 修課查詢
+	  collapsed:: true
 		- [領域專長](https://specom.aca.ntu.edu.tw/)
 		- [學分學程](https://ifsel3.aca.ntu.edu.tw/cou_stu/index.php)
 		- [學士班修課檢視表](https://reg.aca.ntu.edu.tw/GradeCheck/MessageForm?code=1)
+	- 課程
+	  collapsed:: true
+		- 相關資訊
+		  collapsed:: true
+			- [十選二實驗](https://docs.google.com/spreadsheets/d/1JvUu3R3fV3tHYneS0lxWZ96qXH6WeJ7jyJPWfpXwicY/edit#gid=145156398)
+		- 熱傳學
+		  collapsed:: true
+			- [陳炳煇](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2033100&class=01&dpt_code=5020&ser_no=48247&semester=111-1&lang=CH) 二2五34
+			- [楊馥菱](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2033100&class=02&dpt_code=5020&ser_no=52379&semester=111-1&lang=CH) 二2五34
+			- [許麗](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2033100&class=03&dpt_code=5020&ser_no=18500&semester=111-1&lang=CH) 二2五34
+		- 機械設計原理
+		  collapsed:: true
+			- [陳湘鳳](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2034210&class=01&dpt_code=5020&ser_no=28544&semester=111-1&lang=CH) 四789
+			- [黃光裕](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2034210&class=02&dpt_code=5020&ser_no=74654&semester=111-1&lang=CH) 四789
+			- [張秉純](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2034210&class=03&dpt_code=5020&ser_no=62164&semester=111-1&lang=CH) 四789
+		- 自動控制
+		  collapsed:: true
+			- [林沛群](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2045100&class=01&dpt_code=5020&ser_no=82983&semester=111-1&lang=CH) 二34五2
+			- [黃漢邦](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2045100&class=02&dpt_code=5020&ser_no=14024&semester=111-1&lang=CH) 二34五2
+			- [林峻永](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2045100&class=03&dpt_code=5020&ser_no=85027&semester=111-1&lang=CH) 二34五2
+		- 通信原理
+		  collapsed:: true
+			- [林士駿](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=901%2031000&class=&dpt_code=9010&ser_no=59628&semester=111-1&lang=CH) 四789
+		- 專題演講
+		  collapsed:: true
+			- [吳忠幟](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=901%2050100&class=&dpt_code=9010&ser_no=53028&semester=111-1&lang=CH) 三89
+		- 國民法官必備之基礎鑑識科學
+		  collapsed:: true
+			- [翁德怡](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=452%20M0490&class=&dpt_code=0000&ser_no=58150&semester=111-1&lang=CH) 一89
+		- 振動學
+		  collapsed:: true
+			- [盧中仁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=522%20U1510&class=&dpt_code=5220&ser_no=31137&semester=111-1&lang=CH) 一3三34
+		- 自動機與形式語言
+		  collapsed:: true
+			- [林智仁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=902%2043500&class=01&dpt_code=9020&ser_no=64562&semester=111-1&lang=CH) 一345
+			- [陳偉松](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=902%2043500&class=02&dpt_code=9020&ser_no=13088&semester=111-1&lang=CH) 一345
+		- 瑜珈
+		  collapsed:: true
+			- [蘇玫尹](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2051370&class=A7&dpt_code=T010&ser_no=97162&semester=111-1&lang=CH) 二34
+			- [蘇玫尹](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2051370&class=A9&dpt_code=T010&ser_no=97163&semester=111-1&lang=CH) 三34
+		- 桌球中級
+		  collapsed:: true
+			- [陳逸杰](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050910&class=D1&dpt_code=T010&ser_no=97133&semester=111-1&lang=CH) 三34
+		- 桌球初級
+		  collapsed:: true
+			- [王翊澤](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=P8&dpt_code=T010&ser_no=97132&semester=111-1&lang=CH) 一12
+			- [王傑賢](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=G6&dpt_code=T010&ser_no=97131&semester=111-1&lang=CH) 二67
+			- [陳逸杰](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=C9&dpt_code=T010&ser_no=97130&semester=111-1&lang=CH) 三12
+			- [呂宛蓁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=88&dpt_code=T010&ser_no=97129&semester=111-1&lang=CH) 一89
+			- [魏均珩](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=D9&dpt_code=T010&ser_no=97220&semester=111-1&lang=CH) 一34
+			- [呂宛蓁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=87&dpt_code=T010&ser_no=97128&semester=111-1&lang=CH) 一67
+		- 日文三上
+		  collapsed:: true
+			- [洪淑娟](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=02&dpt_code=0000&ser_no=14766&semester=111-1&lang=CH) 五345
+			- [詹兆雯](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=03&dpt_code=0000&ser_no=74679&semester=111-1&lang=CH) 三234
+			- [張鈞竹](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=04&dpt_code=0000&ser_no=30558&semester=111-1&lang=CH) 四234
+			- [石川隆男](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=05&dpt_code=0000&ser_no=30493&semester=111-1&lang=CH) 三567
+			- [曾寶儀](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=06&dpt_code=0000&ser_no=85032&semester=111-1&lang=CH) 二567
