--- a/journals/2022_08_12.md
+++ b/journals/2022_08_12.md
@@ -1,5 +1,4 @@
 - 111-1 課程安排
-  collapsed:: true
 	- 修業規定
 	  collapsed:: true
 		- [電機工程學系學生選課注意事項](https://www.ee.ntu.edu.tw/eeoffice/download/News/2208091401081.pdf)
@@ -11,7 +10,6 @@
 		- [學分學程](https://ifsel3.aca.ntu.edu.tw/cou_stu/index.php)
 		- [學士班修課檢視表](https://reg.aca.ntu.edu.tw/GradeCheck/MessageForm?code=1)
 	- 課程
-	  collapsed:: true
 		- 相關資訊
 		  collapsed:: true
 			- [十選二實驗](https://docs.google.com/spreadsheets/d/1JvUu3R3fV3tHYneS0lxWZ96qXH6WeJ7jyJPWfpXwicY/edit#gid=145156398)
@@ -68,3 +66,9 @@
 			- [張鈞竹](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=04&dpt_code=0000&ser_no=30558&semester=111-1&lang=CH) 四234
 			- [石川隆男](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=05&dpt_code=0000&ser_no=30493&semester=111-1&lang=CH) 三567
 			- [曾寶儀](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=06&dpt_code=0000&ser_no=85032&semester=111-1&lang=CH) 二567
+		- 貨幣銀行學一
+		  collapsed:: true
+			- [陳南光](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=303%2025010&class=01&dpt_code=3030&ser_no=39437&semester=111-1&lang=CH) 五678
+		- 投資學
+		  collapsed:: true
+			- [何耕宇](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=303%2037600&class=02&dpt_code=3030&ser_no=43197&semester=111-1&lang=CH) 二789
