--- a/journals/2022_08_12.md
+++ b/journals/2022_08_12.md
@@ -9,49 +9,62 @@
 		- [領域專長](https://specom.aca.ntu.edu.tw/)
 		- [學分學程](https://ifsel3.aca.ntu.edu.tw/cou_stu/index.php)
 		- [學士班修課檢視表](https://reg.aca.ntu.edu.tw/GradeCheck/MessageForm?code=1)
+	- id:: 62fb40d7-32e9-466f-a331-cadcd85c4e8f
+	  || Mon | Tue | Wed | Thu | Fri |
+	  |1|[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))||[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))|||
+	  |2|[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))|[! 熱傳學](((62f89b0d-5b54-446a-8680-b8abde31878e)))|[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))、[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))|[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))、[投資學](((62fa7651-e35a-4e84-8517-60ab2f069894)))、[系統程式設計](((62fb4b07-1c99-461f-9b98-c3223604a368)))|[! 自動控制](((62f89e88-cc4c-488f-89ec-3dd5b019726d)))|
+	  |3|[振動學](((f4d391f2-5250-46fb-9000-86b2c29e087a)))、[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))、[自動機與形式語言](((53c60cc7-1f55-4ca3-8134-9069debd7759)))|[! 自動控制](((62f89e88-cc4c-488f-89ec-3dd5b019726d)))|[振動學](((f4d391f2-5250-46fb-9000-86b2c29e087a)))、[瑜珈](((1407cfd2-9c39-43a5-b6f5-4411a91d3f67)))、[桌球中級](((cda54f8c-ed2b-4066-880d-4b90242ae348)))、[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))|[音樂作品欣賞一](((62fb3899-adb2-4764-9fe3-3b8f7ad94514)))、[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))、[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))、[投資學](((62fa7651-e35a-4e84-8517-60ab2f069894)))、[飛行器原理與實作一](((62fb4765-0c15-4d62-b886-7900abcd804a)))、[系統程式設計](((62fb4b07-1c99-461f-9b98-c3223604a368)))|[! 熱傳學](((62f89b0d-5b54-446a-8680-b8abde31878e)))|
+	  |4|[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))、[自動機與形式語言](((53c60cc7-1f55-4ca3-8134-9069debd7759)))|[! 自動控制](((62f89e88-cc4c-488f-89ec-3dd5b019726d)))|[振動學](((f4d391f2-5250-46fb-9000-86b2c29e087a)))、[瑜珈](((1407cfd2-9c39-43a5-b6f5-4411a91d3f67)))、[桌球中級](((cda54f8c-ed2b-4066-880d-4b90242ae348)))、[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))|[音樂作品欣賞一](((62fb3899-adb2-4764-9fe3-3b8f7ad94514)))、[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))、[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))、[投資學](((62fa7651-e35a-4e84-8517-60ab2f069894)))、[飛行器原理與實作一](((62fb4765-0c15-4d62-b886-7900abcd804a)))、[系統程式設計](((62fb4b07-1c99-461f-9b98-c3223604a368)))|[! 熱傳學](((62f89b0d-5b54-446a-8680-b8abde31878e)))|
+	  |5|[自動機與形式語言](((53c60cc7-1f55-4ca3-8134-9069debd7759)))|[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))|[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))|[飛行器原理與實作一](((62fb4765-0c15-4d62-b886-7900abcd804a)))||
+	  |6|[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))|[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))、[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))|[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))||[貨幣銀行學一](((62fa7635-3911-48f0-87a7-49ae58a12ec2)))|
+	  |7|[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))|[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))、[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))、[投資學](((62fa7651-e35a-4e84-8517-60ab2f069894)))、[先進半導體與顯示技術](((62fb037c-f650-4c3e-beec-915c274e2b6d)))、[電腦輔助積體電路系統設計](((62fb1036-dc85-41d8-a191-e2ec716b86bf)))|[日文三上](((bb297148-2c45-44ce-8916-a3d590af1856)))|[! 機械設計原理](((62f89ddf-5ef6-46dc-aa9b-078159ca0192)))|[貨幣銀行學一](((62fa7635-3911-48f0-87a7-49ae58a12ec2)))|
+	  |8|[國民法官必備之基礎鑑識科學](((62f8db28-751c-4993-b425-d7649b7cd22b)))、[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))|[投資學](((62fa7651-e35a-4e84-8517-60ab2f069894)))、[先進半導體與顯示技術](((62fb037c-f650-4c3e-beec-915c274e2b6d)))、[電腦輔助積體電路系統設計](((62fb1036-dc85-41d8-a191-e2ec716b86bf)))|[! 專題演講](((62f8b5b4-3127-4008-9f23-9a30b7e591e4)))|[! 機械設計原理](((62f89ddf-5ef6-46dc-aa9b-078159ca0192)))|[貨幣銀行學一](((62fa7635-3911-48f0-87a7-49ae58a12ec2)))|
+	  |9|[國民法官必備之基礎鑑識科學](((62f8db28-751c-4993-b425-d7649b7cd22b)))、[桌球初級](((91240589-fcb2-4208-8001-8630ea506269)))|[投資學](((62fa7651-e35a-4e84-8517-60ab2f069894)))、[先進半導體與顯示技術](((62fb037c-f650-4c3e-beec-915c274e2b6d)))、[電腦輔助積體電路系統設計](((62fb1036-dc85-41d8-a191-e2ec716b86bf)))|[! 專題演講](((62f8b5b4-3127-4008-9f23-9a30b7e591e4)))|[! 機械設計原理](((62f89ddf-5ef6-46dc-aa9b-078159ca0192)))||
+	  |10||||||
 	- 課程
 		- 相關資訊
 		  collapsed:: true
 			- [十選二實驗](https://docs.google.com/spreadsheets/d/1JvUu3R3fV3tHYneS0lxWZ96qXH6WeJ7jyJPWfpXwicY/edit#gid=145156398)
-		- 熱傳學
+		- ! 熱傳學
+		  id:: 62f89b0d-5b54-446a-8680-b8abde31878e
 		  collapsed:: true
 			- [陳炳煇](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2033100&class=01&dpt_code=5020&ser_no=48247&semester=111-1&lang=CH) 二2五34
 			- [楊馥菱](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2033100&class=02&dpt_code=5020&ser_no=52379&semester=111-1&lang=CH) 二2五34
 			- [許麗](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2033100&class=03&dpt_code=5020&ser_no=18500&semester=111-1&lang=CH) 二2五34
-		- 機械設計原理
+		- ! 機械設計原理
+		  id:: 62f89ddf-5ef6-46dc-aa9b-078159ca0192
 		  collapsed:: true
 			- [陳湘鳳](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2034210&class=01&dpt_code=5020&ser_no=28544&semester=111-1&lang=CH) 四789
 			- [黃光裕](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2034210&class=02&dpt_code=5020&ser_no=74654&semester=111-1&lang=CH) 四789
 			- [張秉純](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2034210&class=03&dpt_code=5020&ser_no=62164&semester=111-1&lang=CH) 四789
-		- 自動控制
+		- ! 自動控制
+		  id:: 62f89e88-cc4c-488f-89ec-3dd5b019726d
 		  collapsed:: true
 			- [林沛群](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2045100&class=01&dpt_code=5020&ser_no=82983&semester=111-1&lang=CH) 二34五2
 			- [黃漢邦](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2045100&class=02&dpt_code=5020&ser_no=14024&semester=111-1&lang=CH) 二34五2
 			- [林峻永](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=502%2045100&class=03&dpt_code=5020&ser_no=85027&semester=111-1&lang=CH) 二34五2
-		- 通信原理
-		  collapsed:: true
-			- [林士駿](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=901%2031000&class=&dpt_code=9010&ser_no=59628&semester=111-1&lang=CH) 四789
-		- 專題演講
+		- ! 專題演講
+		  id:: 62f8b5b4-3127-4008-9f23-9a30b7e591e4
 		  collapsed:: true
 			- [吳忠幟](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=901%2050100&class=&dpt_code=9010&ser_no=53028&semester=111-1&lang=CH) 三89
+		- 音樂作品欣賞一
+		  id:: 62fb3899-adb2-4764-9fe3-3b8f7ad94514
+		  collapsed:: true
+			- [蔡世豪](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=101%2028310&class=01&dpt_code=0000&ser_no=50199&semester=111-1&lang=CH) 四34
 		- 國民法官必備之基礎鑑識科學
+		  id:: 62f8db28-751c-4993-b425-d7649b7cd22b
 		  collapsed:: true
 			- [翁德怡](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=452%20M0490&class=&dpt_code=0000&ser_no=58150&semester=111-1&lang=CH) 一89
-		- 振動學
-		  collapsed:: true
-			- [盧中仁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=522%20U1510&class=&dpt_code=5220&ser_no=31137&semester=111-1&lang=CH) 一3三34
-		- 自動機與形式語言
-		  collapsed:: true
-			- [林智仁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=902%2043500&class=01&dpt_code=9020&ser_no=64562&semester=111-1&lang=CH) 一345
-			- [陳偉松](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=902%2043500&class=02&dpt_code=9020&ser_no=13088&semester=111-1&lang=CH) 一345
 		- 瑜珈
+		  id:: 1407cfd2-9c39-43a5-b6f5-4411a91d3f67
 		  collapsed:: true
-			- [蘇玫尹](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2051370&class=A7&dpt_code=T010&ser_no=97162&semester=111-1&lang=CH) 二34
 			- [蘇玫尹](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2051370&class=A9&dpt_code=T010&ser_no=97163&semester=111-1&lang=CH) 三34
 		- 桌球中級
+		  id:: cda54f8c-ed2b-4066-880d-4b90242ae348
 		  collapsed:: true
 			- [陳逸杰](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050910&class=D1&dpt_code=T010&ser_no=97133&semester=111-1&lang=CH) 三34
 		- 桌球初級
+		  id:: 91240589-fcb2-4208-8001-8630ea506269
 		  collapsed:: true
 			- [王翊澤](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=P8&dpt_code=T010&ser_no=97132&semester=111-1&lang=CH) 一12
 			- [王傑賢](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=G6&dpt_code=T010&ser_no=97131&semester=111-1&lang=CH) 二67
@@ -59,16 +72,46 @@
 			- [呂宛蓁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=88&dpt_code=T010&ser_no=97129&semester=111-1&lang=CH) 一89
 			- [魏均珩](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=D9&dpt_code=T010&ser_no=97220&semester=111-1&lang=CH) 一34
 			- [呂宛蓁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=87&dpt_code=T010&ser_no=97128&semester=111-1&lang=CH) 一67
+			- [魏均珩](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=002%2050900&class=F3&dpt_code=T010&ser_no=97221&semester=111-1&lang=CH) 四34
 		- 日文三上
+		  id:: bb297148-2c45-44ce-8916-a3d590af1856
 		  collapsed:: true
-			- [洪淑娟](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=02&dpt_code=0000&ser_no=14766&semester=111-1&lang=CH) 五345
 			- [詹兆雯](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=03&dpt_code=0000&ser_no=74679&semester=111-1&lang=CH) 三234
 			- [張鈞竹](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=04&dpt_code=0000&ser_no=30558&semester=111-1&lang=CH) 四234
 			- [石川隆男](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=05&dpt_code=0000&ser_no=30493&semester=111-1&lang=CH) 三567
 			- [曾寶儀](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=107%2042531&class=06&dpt_code=0000&ser_no=85032&semester=111-1&lang=CH) 二567
 		- 貨幣銀行學一
+		  id:: 62fa7635-3911-48f0-87a7-49ae58a12ec2
 		  collapsed:: true
 			- [陳南光](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=303%2025010&class=01&dpt_code=3030&ser_no=39437&semester=111-1&lang=CH) 五678
 		- 投資學
+		  id:: 62fa7651-e35a-4e84-8517-60ab2f069894
 		  collapsed:: true
 			- [何耕宇](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=303%2037600&class=02&dpt_code=3030&ser_no=43197&semester=111-1&lang=CH) 二789
+			- [陳彥行](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=303%2037600&class=03&dpt_code=3030&ser_no=55843&semester=111-1&lang=CH) 四234
+		- 振動學
+		  id:: f4d391f2-5250-46fb-9000-86b2c29e087a
+		  collapsed:: true
+			- [盧中仁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=522%20U1510&class=&dpt_code=5220&ser_no=31137&semester=111-1&lang=CH) 一3三34
+		- 飛行器原理與實作一
+		  id:: 62fb4765-0c15-4d62-b886-7900abcd804a
+		  collapsed:: true
+			- [潘國隆](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=522%20U6200&class=&dpt_code=5020&ser_no=18825&semester=111-1&lang=CH) 四345
+		- 先進半導體與顯示技術
+		  id:: 62fb037c-f650-4c3e-beec-915c274e2b6d
+		  collapsed:: true
+			- [劉致為](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=943%20U0530&class=&dpt_code=9210&ser_no=21121&semester=111-1&lang=CH) 二789
+		- 電腦輔助積體電路系統設計
+		  id:: 62fb1036-dc85-41d8-a191-e2ec716b86bf
+		  collapsed:: true
+			- [楊家驤](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=943%20U0240&class=&dpt_code=9430&ser_no=83952&semester=111-1&lang=CH) 二789
+		- 自動機與形式語言
+		  id:: 53c60cc7-1f55-4ca3-8134-9069debd7759
+		  collapsed:: true
+			- [林智仁](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=902%2043500&class=01&dpt_code=9020&ser_no=64562&semester=111-1&lang=CH) 一345
+			- [陳偉松](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=902%2043500&class=02&dpt_code=9020&ser_no=13088&semester=111-1&lang=CH) 一345
+		- 系統程式設計
+		  id:: 62fb4b07-1c99-461f-9b98-c3223604a368
+		  collapsed:: true
+			- [鄭卜壬](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=902%2025900&class=01&dpt_code=9020&ser_no=25190&semester=111-1&lang=CH) 四234
+			- [黎士瑋](https://nol.ntu.edu.tw/nol/coursesearch/print_table.php?course_id=902%2025900&class=02&dpt_code=9020&ser_no=20741&semester=111-1&lang=CH) 四234
