--- a/pages/CNN 2022Q3.md
+++ b/pages/CNN 2022Q3.md
@@ -36,32 +36,98 @@
 		- pacifier
 	- #card 稱號；綽號 m_r
 		- moniker
-	- #card 統治；在位；在位期間；統治(時期)
-	- #card 白金；鉑
-	- #card 禧年紀念；歡慶
-	- #card 成功的；喜悅的
-	- #card 結尾；終曲；終章
-	- #card 四輪馬車
-	- #card 神秘的；不可思議的
-	- #card 全像圖；全像投影
-	- #card 令人毛骨悚然的；恐怖的
+	- #card 統治；在位；在位期間；統治(時期) r_n
+		- reign
+	- #card 白金；鉑 p_m
+		- platinum
+	- #card 禧年紀念；歡慶 j_e
+		- jubilee
+	- #card 成功的；喜悅的 t_t
+		- triumphant
+	- #card 結尾；終曲；終章 f_e
+		- finale
+	- #card 四輪馬車 c_e
+		- carriage
+	- #card 神秘的；不可思議的 m_s
+		- mysterious
+	- #card 全像圖；全像投影 h_m
+		- hologram
+	- #card 令人毛骨悚然的；恐怖的 s_y
+		- spooky
 	- #card 紀年某人；向某人致敬
-	- #card 絕妙的；聰明的
-	- #card 奢華的；過分的
-	- #card 靈活性；移動能力
-	- #card 迷人的
-	- #card 翠綠色；祖母綠
-	- #card 表示；象徵
-	- #card 住所；宅邸
-	- #card 書擋；做為某事物頭尾的相似物
-	- #card 激勵；使精神充沛
-	- #card 發布；發出
+		- in sb's honor
+		- in honor of sb
+	- #card 絕妙的；聰明的 c_r
+		- clever
+	- #card 奢華的；過分的 e_t
+		- extravagant
+	- #card 靈活性；移動能力 m_y
+		- mobility
+	- #card 迷人的 r_g
+		- ravishing
+	- #card 翠綠色；祖母綠 e_d
+		- emerald
+	- #card 表示；象徵 s_y
+		- signify
+	- #card 住所；宅邸 r_e
+		- residence
+	- #card 書擋；做為某事物頭尾的相似物 b_d
+		- bookend
+	- #card 激勵；使精神充沛 e_e
+		- energize
+	- #card 發布；發出 i_e
+		- issue
 	- #card 默許；心照不宣
-	- #card 使感到卑微；謙遜
-	- #card 君王；君主
-	- #card 投入；致力於
-	- #card 退位；正式放棄(高位)
-	- #card 親屬關係；親切感
-	- #card 不和；分歧
-	- #card 使振奮；激勵；鼓舞
+		- nod, nod, wink, wink
+	- #card 使感到卑微；謙遜 h_e
+		- humble
+	- #card 君王；君主 m_h
+		- monarch
+	- #card 投入；致力於 c_t
+		- commit
+	- #card 退位；正式放棄(高位) a_e
+		- abdicate
+	- #card 親屬關係；親切感 k_p
+		- kinship
+	- #card 不和；分歧 d_s
+		- divisiveness
+	- #card 使振奮；激勵；鼓舞 h_n
+		- hearten
 	- #card 介入；居中斡旋
+		- step in
+	- #card (通常指不愉快的)大量突發事件 s_e
+		- spate
+	- #card 殘殺；屠殺 s_r
+		- slaughter
+	- #card (子彈)一發 r_d
+		- round
+	- #card 彈藥；軍火 a_n
+		- ammunition
+	- #card 幼稚的；不成熟的 i_e
+		- immature
+	- #card 執照；許可證 l_e
+		- license
+	- #card 與…相似；反映出 m_r
+		- mirror
+	- #card 自由派的；開明的 l_l
+		- liberal
+	- #card 傾向 l_n
+		- lean
+	- #card 英雄氣概；英勇行為 h_m
+		- heroism
+	- #card 革命的 r_y
+		- revolutionary
+	- #card 再肯定；重申 r_m
+		- reaffirm
+	- #card 犧牲 s_e
+		- sacrifice
+	- #card 半自動的 s_c
+		- semiautomatic
+	- #card 白人至上主義者 w_t
+		- white supremacist
+	- #card 大多數地 p_y
+		- predominantly
+	- #card 廢除；裁定違法
+		- strike down
+	- #card 攜帶武器；從軍
+		- bear arms
