--- a/pages/CNN 2022_2.md
+++ b/pages/CNN 2022_2.md
@@ -1,5 +1,3 @@
-title:: CNN 2022_2
-
 - # [2022 July](https://qrcode.liveabc.com/magazine/9b931a69-00da-43c0-b0df-b9376ef2b7de)
 - # [2022 August](https://qrcode.liveabc.com/magazine/8af00811-2102-4fc4-b49e-3f4ad4608ea6)
   collapsed:: true
@@ -284,28 +282,104 @@ title:: CNN 2022_2
 	  collapsed:: true
 		- verdict
 	- #card 摔角；角力 w_e
+	  collapsed:: true
+		- wrestle
 	- #card (地位、權利、責任等)平等 e_y
+	  collapsed:: true
+		- equality
 	- #card 巨大的；相當沉重的 h_g
+	  collapsed:: true
+		- hulking
 	- #card 比試；較量 b_t
+	  collapsed:: true
+		- bout
 	- #card 禁止 b_n
+	  collapsed:: true
+		- ban
 	- #card 拳鬥；輕拳出擊 s_r
+	  collapsed:: true
+		- spar
 	- #card 推翻；使瓦解 t_e
+	  collapsed:: true
+		- topple
 	- #card 藩籬；障礙 b_r
+	  collapsed:: true
+		- barrier
 	- #card 主導；支配 d_e
+	  collapsed:: true
+		- dominate
 	- #card 試試看
+	  collapsed:: true
+		- give it a go
 	- #card 打翻；撞倒；排除；淘汰
+	  collapsed:: true
+		- knock over
 	- #card 使心煩；使困擾 b_r
+	  collapsed:: true
+		- bother
 	- #card 醜聞；醜事 s_l
+	  collapsed:: true
+		- scandal
 	- #card 玷汙；敗壞 t_h
+	  collapsed:: true
+		- tarnish
 	- #card 名譽；名聲 r_n
+	  collapsed:: true
+		- reputation
 	- #card 據稱；據說 s_y
+	  collapsed:: true
+		- supposedly
 	- #card 不純淨的 i_e
+	  collapsed:: true
+		- impure
 	- #card 神聖的；不可侵犯的 s_d
+	  collapsed:: true
+		- sacred
 	- #card 點燃；激起 s_k
+	  collapsed:: true
+		- spark
 	- #card 強烈反應；反彈 b_h
+	  collapsed:: true
+		- backlash
 	- #card 促使；驅使 p_t
+	  collapsed:: true
+		- prompt
 	- #card 開始的；首次的 i_l
+	  collapsed:: true
+		- inaugural
 	- #card 衛冕冠軍 d_n
+	  collapsed:: true
+		- defending champion
 	- #card 沉默寡言的 t_n
+	  collapsed:: true
+		- taciturn
 	- #card 使公平競爭
+	  collapsed:: true
+		- level the playing field
+	- #card 關於太陽的；太陽影響產生的 s_r
+	- #card 抱負；野心 a_n
+	- #card 空前的；無前例的 u_d
+	- #card 提供資訊的 i_e
+	- #card 調查；研究 i_e
+	- #card 磁鐵的；有磁性的 m_c
+	- #card 日冕 c_a
+	- #card 互補的 c_y
+	- #card 能力；功能 c_y
+	- #card 拓展；擴大 b_n
+	- #card (事件的)背景 c_t
+	- #card 承受；抵擋；頂住 w_d
+	- #card 合成物 c_e
+	- #card 護罩；擋板 s_d
+	- #card 鑽(孔) d_l
+	- #card 電漿 p_a
+	- #card 分開；分離 d_h
+	- #card 顆粒；微粒 p_e
+	- #card 打算做…；計畫…
+	- #card 紀錄保持者
+	- #card 配備有…
+	- #card 共鳴；回響 r_e
+	- #card 引力的；重力的 g_l
+	- #card 赤道 e_r
+	- #card 極地的 p_r
+	- #card 預測；預報 p_t
 - # 2022 September
