--- a/journals/2022_08_24.md
+++ b/journals/2022_08_24.md
@@ -1,2 +1,17 @@
 - #korean [敬語](https://elisa0213.pixnet.net/blog/post/226768418-%E9%9F%93%E8%AA%9E4%E5%A4%A7%E6%95%AC%E8%AA%9E-%E4%BD%A0%E7%9F%A5%E9%81%93%E4%BA%86%E5%97%8E%3F--%E7%B0%A1%E5%96%AE%E4%BB%8B%E7%B4%B9%E5%B0%8D%E8%B1%A1%E6%95%AC%E8%AA%9E)
-- #shoppingList TOSHIBA RZE-BT160H
+- #investment 三字訣
+	- 懂趨勢
+		- 多 or 空、牛 or 熊
+		- 豬站在風口上也會飛
+	- 訂策略
+		- 買進股票前先做好計畫、投資交易策略
+		- 幫自己找出最適合的投資策略
+	- 做功課
+		- 了解自己的個性、風險承受度、工具特性、遊戲規則
+	- 守紀律
+		- 有紀律地執行停損最重要
+		- 避免套牢
+	- 留部位
+		- 至少留30%(?)部位在持股
+		- 原因：根據過往經歷，空頭時間不長
+		- 輕易出清手上部位，往往要花更多時間和金錢補回
