--- a/pages/CNN 2022 2.md
+++ b/pages/CNN 2022 2.md
@@ -43,9 +43,9 @@
 	- #card 聞；看不起 s_t
 	  collapsed:: true
 		- sniff at
-	- #card 大口吃；用力咀嚼 m_n
+	- #card 大口吃；用力咀嚼 m_h
 	  collapsed:: true
-		- munch on
+		- munch (on)
 	- #card 悠閒放鬆的 l_k
 	  collapsed:: true
 		- laid-back
@@ -223,7 +223,7 @@
 		- testimony
 	- #card 對決；交鋒
 	  collapsed:: true
-		- face off
+		- face off (against)
 	- #card 犯(罪)；做(錯事) c_t
 	  collapsed:: true
 		- commit
@@ -357,29 +357,102 @@
 	  collapsed:: true
 		- level the playing field
 	- #card 關於太陽的；太陽影響產生的 s_r
+	  collapsed:: true
+		- solar
 	- #card 抱負；野心 a_n
+	  collapsed:: true
+		- ambition
 	- #card 空前的；無前例的 u_d
+	  collapsed:: true
+		- unprecedented
 	- #card 提供資訊的 i_e
+	  collapsed:: true
+		- informative
 	- #card 調查；研究 i_e
+	  collapsed:: true
+		- investigate
 	- #card 磁鐵的；有磁性的 m_c
+	  collapsed:: true
+		- magnetic
 	- #card 日冕 c_a
+	  collapsed:: true
+		- corona
 	- #card 互補的 c_y
+	  collapsed:: true
+		- complementary
 	- #card 能力；功能 c_y
+	  collapsed:: true
+		- capability
 	- #card 拓展；擴大 b_n
+	  collapsed:: true
+		- broaden
 	- #card (事件的)背景 c_t
+	  collapsed:: true
+		- context
 	- #card 承受；抵擋；頂住 w_d
+	  collapsed:: true
+		- withstand
 	- #card 合成物 c_e
+	  collapsed:: true
+		- composite
 	- #card 護罩；擋板 s_d
+	  collapsed:: true
+		- shield
 	- #card 鑽(孔) d_l
+	  collapsed:: true
+		- drill
 	- #card 電漿 p_a
+	  collapsed:: true
+		- plasma
 	- #card 分開；分離 d_h
+	  collapsed:: true
+		- detach
 	- #card 顆粒；微粒 p_e
+	  collapsed:: true
+		- particle
 	- #card 打算做…；計畫…
+	  collapsed:: true
+		- plan on (V-ing)
 	- #card 紀錄保持者
+	  collapsed:: true
+		- record holder
 	- #card 配備有…
+	  collapsed:: true
+		- be fitted with
 	- #card 共鳴；回響 r_e
+	  collapsed:: true
+		- resonance
 	- #card 引力的；重力的 g_l
+	  collapsed:: true
+		- gravitational
 	- #card 赤道 e_r
+	  collapsed:: true
+		- equator
 	- #card 極地的 p_r
+	  collapsed:: true
+		- polar
 	- #card 預測；預報 p_t
+	  collapsed:: true
+		- predict
+	- #card 柴油 d_l
+	- #card 油輪 t_r
+	- #card 出口；外銷 e_t
+	- #card 精煉廠；煉油廠 r_y
+	- #card 結束；終止 c_e
+	- #card 缺少；不足；匱乏 s_e
+	- #card 倉庫；儲藏所 d_t
+	- #card 麥片；穀片 c_l
+	- #card 額外費用；附加費 s_e
+	- #card 回收(成本)；補償 r_p
+	- #card 使遭受(傷害等)；加強 i_t
+	- #card 易損壞的；易碎的 b_e
+	- #card 導致；促成 c_e
+	- #card 拉回 p_k
+	- #card 彌補；補足
+	- #card 貨比三家
+	- #card 扭轉局勢
+	- #card 夠了；到此為止
+	- #card 趨於穩定
+	- #card 目前；暫時
+	- #card
 - # 2022 September
