--- a/journals/2022_08_24.md
+++ b/journals/2022_08_24.md
@@ -15,3 +15,24 @@
 		- 至少留30%(?)部位在持股
 		- 原因：根據過往經歷，空頭時間不長
 		- 輕易出清手上部位，往往要花更多時間和金錢補回
+	- 懂主力
+		- 主力(個人或法人)的操作手法：進貨、拉升股價、出貨
+		- 底部整盤時期
+			- 成交量平均：主力分批買進，怕被發現
+			- 股價會在一定區間內(上有壓力、下有支撐)：若有人跟買，主力會反手殺出，逼迫跟買者出場，盤整一段時間再拉抬
+		- 第一主升段(散戶進場)
+			- 中長紅陽棒拉升：主力將股價以長紅陽線帶大量的方式突破整盤時期的壓力區
+			- 股價壓回壓力區頂部並再次拉抬：為使搭轎的散戶成本提高，減輕往後拉抬時的賣壓
+			- 成交量不斷放大、利多訊息被大幅報導
+		- 中段整理時期
+			- 使股價能更進一步走高，並減低拉抬時的賣壓
+			- 主力將短多浮額誘出，使籌碼重歸穩定
+			- 量漸縮到差不多底部整盤時期的成交量大小時結束
+		- 第二主升段
+			- 股價表現強勁
+			- 成交量不見得會隨股價走高而放大：市場大眾一致看好該股後勢發展；或籌碼已被完全掌控，造成流通的股票量少，買的人多而造成供需失調
+			- 末期成績交量巨幅萎縮
+		- 轉折下跌時期
+			- 拉高震盪出貨
+			- 有些太技術面的東西搞懂後再來寫好了
+		-
