--- a/pages/CNN 2022 2.md
+++ b/pages/CNN 2022 2.md
@@ -435,24 +435,85 @@
 	  collapsed:: true
 		- predict
 	- #card 柴油 d_l
+	  collapsed:: true
+		- diesel
 	- #card 油輪 t_r
+	  collapsed:: true
+		- tanker
 	- #card 出口；外銷 e_t
+	  collapsed:: true
+		- export
 	- #card 精煉廠；煉油廠 r_y
+	  collapsed:: true
+		- refinery
 	- #card 結束；終止 c_e
+	  collapsed:: true
+		- closure
 	- #card 缺少；不足；匱乏 s_e
+	  collapsed:: true
+		- shortage
 	- #card 倉庫；儲藏所 d_t
+	  collapsed:: true
+		- depot
 	- #card 麥片；穀片 c_l
+	  collapsed:: true
+		- cereal
 	- #card 額外費用；附加費 s_e
+	  collapsed:: true
+		- surcharge
 	- #card 回收(成本)；補償 r_p
+	  collapsed:: true
+		- recoup
 	- #card 使遭受(傷害等)；加強 i_t
+	  collapsed:: true
+		- inflict
 	- #card 易損壞的；易碎的 b_e
+	  collapsed:: true
+		- brittle
 	- #card 導致；促成 c_e
+	  collapsed:: true
+		- contribute
 	- #card 拉回 p_k
+	  collapsed:: true
+		- pullback
 	- #card 彌補；補足
+	  collapsed:: true
+		- make up (for)
 	- #card 貨比三家
+	  collapsed:: true
+		- shop around
 	- #card 扭轉局勢
+	  collapsed:: true
+		- turn the tide
 	- #card 夠了；到此為止
+	  collapsed:: true
+		- enough is enough
 	- #card 趨於穩定
+	  collapsed:: true
+		- level off
 	- #card 目前；暫時
+	  collapsed:: true
+		- for the time being
+	- #card 全景；全景圖 p_a
+	- #card 堆；群；串 b_h
+	- #card 組合；組裝 a_e
+	- #card 魚眼鏡頭；超廣角鏡頭 f_s
+	- #card 百萬畫素 m_l
+	- #card 可攜帶的；手提的 p_e
+	- #card 柄；把手 h_e
+	- #card 運送；傳送 t_t
+	- #card 沉浸感的；身歷其境的 i_e
+	- #card 視覺的 v_l
+	- #card 繫住；捆紮 s_p
+	- #card 影像；照片 i_y
+	- #card 園區 c_s
+	- #card 快轉前進 f_d
+	- #card 大陸；洲 c_t
+	- #card 里程碑；劃時代的事件 m_e
+	- #card 願景；遠見 v_n
+	- #card 持久；留存 e_e
+	- #card 遠程出席；遠程呈現 t_e
+	- #card 相當大的部分(或數量) c_k
+	- #card 引人入勝的；非常有趣的 c_g
 	- #card
 - # 2022 September
