--- a/logseq/bak/journals/2022_08_26/2022-08-27T14_31_39.794Z.md
+++ b/logseq/bak/journals/2022_08_26/2022-08-27T14_31_39.794Z.md
@@ -11,7 +11,7 @@
 			- e.g.: 股價100、股利5，殖利率5%
 			- 股價上漲至110、股利仍為5，殖利率4.5%
 			- 股價下跌至90、股利仍為5，殖利率5.6%
-- #investment #zrbrosfq [定存、股票](https://www.youtube.com/watch?v=kF6XomSRcUw&list=PLrZrfGLGySzcZoVhb4idy5B0XI25ZhnF7&index=2)
+- #investment #zrbrosfq [定存、存股](https://www.youtube.com/watch?v=kF6XomSRcUw&list=PLrZrfGLGySzcZoVhb4idy5B0XI25ZhnF7&index=2)
 	- 報酬愈高、風險愈高
 	- 股票
 		- 股票價格會變動
