--- a/logseq/bak/pages/CNN 2022 2/2022-08-27T14_31_39.832Z.md
+++ b/logseq/bak/pages/CNN 2022 2/2022-08-27T14_31_39.832Z.md
@@ -1,5 +1,6 @@
 - # [2022 July](https://qrcode.liveabc.com/magazine/9b931a69-00da-43c0-b0df-b9376ef2b7de)
 - # [2022 August](https://qrcode.liveabc.com/magazine/8af00811-2102-4fc4-b49e-3f4ad4608ea6)
+  collapsed:: true
 	- #card 崩塌；陷落 c_n
 	  collapsed:: true
 		- cave in
@@ -514,38 +515,5 @@
 	- #card 遠程出席；遠程呈現 t_e
 	- #card 相當大的部分(或數量) c_k
 	- #card 引人入勝的；非常有趣的 c_g
-	- #card 林地復育 r_n
-	- #card 推動；幫助；促進 b_t
-	- #card 影片片段；連續鏡頭 f_e
-	- #card 公頃 h_e
-	- #card 損害；危害 d_n
-	- #card 復原；重建 r_n
-	- #card 使惡化；使加重；使發怒 e_e
-	- #card 促進、增進、加速 a_e
-	- #card 感人的號召；動人的演講
-	- #card 大規模地
-	- #card 鏟子 s_l
-	- #card 激勵；刺激 m_e
-	- #card 北的；北極的；寒帶針葉林的 b_l
-	- #card 獨特的；特殊的 d_e
-	- #card 地球的；陸地的 t_l
-	- #card 生物族群 b_e
-	- #card (使)自動化 a_e
-	- #card 地形；地面 t_n
-	- #card 多元的；多樣的 d_e
-	- #card 斜坡；山坡 s_e
-	- #card 枯立木 s_g
-	- #card 繞過；迴避 b_s
-	- #card 船隊；機隊；車隊 f_t
-	- #card 直達重點
-	- #card 與…對照之下；而非
-	- #card 發芽；成長 g_e
-	- #card 從中作梗；妨礙；使陷於困境 s_e
-	- #card 普遍的；廣泛的 w_e
-	- #card 採用；採納 a_n
-	- #card 演算法；規則系統 a_m
-	- #card 增補；補充 s_t
-	- #card 再生；新生 r_n
-	- #card 從頭開始；從零開始
-	- #card 很多；大量
+	- #card
 - # 2022 September
