--- a/pages/CNN 2022 2.md
+++ b/pages/CNN 2022 2.md
@@ -494,58 +494,193 @@
 	  collapsed:: true
 		- for the time being
 	- #card 全景；全景圖 p_a
+	  collapsed:: true
+		- panorama
 	- #card 堆；群；串 b_h
+	  collapsed:: true
+		- bunch
 	- #card 組合；組裝 a_e
+	  collapsed:: true
+		- assemble
 	- #card 魚眼鏡頭；超廣角鏡頭 f_s
+	  collapsed:: true
+		- fish-eye lens
 	- #card 百萬畫素 m_l
+	  collapsed:: true
+		- megapixel
 	- #card 可攜帶的；手提的 p_e
+	  collapsed:: true
+		- portable
 	- #card 柄；把手 h_e
+	  collapsed:: true
+		- handle
 	- #card 運送；傳送 t_t
+	  collapsed:: true
+		- transport
 	- #card 沉浸感的；身歷其境的 i_e
+	  collapsed:: true
+		- immersive
 	- #card 視覺的 v_l
+	  collapsed:: true
+		- visual
 	- #card 繫住；捆紮 s_p
+	  collapsed:: true
+		- strap
 	- #card 影像；照片 i_y
+	  collapsed:: true
+		- imagery
 	- #card 園區 c_s
+	  collapsed:: true
+		- campus
 	- #card 快轉前進 f_d
+	  collapsed:: true
+		- fast-forward
 	- #card 大陸；洲 c_t
+	  collapsed:: true
+		- continent
 	- #card 里程碑；劃時代的事件 m_e
+	  collapsed:: true
+		- milestone
 	- #card 願景；遠見 v_n
+	  collapsed:: true
+		- vision
 	- #card 持久；留存 e_e
+	  collapsed:: true
+		- endure
 	- #card 遠程出席；遠程呈現 t_e
+	  collapsed:: true
+		- telepresence
 	- #card 相當大的部分(或數量) c_k
+	  collapsed:: true
+		- chunk
 	- #card 引人入勝的；非常有趣的 c_g
+	  collapsed:: true
+		- compelling
 	- #card 林地復育 r_n
+	  collapsed:: true
+		- reforestation
 	- #card 推動；幫助；促進 b_t
+	  collapsed:: true
+		- boost
 	- #card 影片片段；連續鏡頭 f_e
+	  collapsed:: true
+		- footage
 	- #card 公頃 h_e
+	  collapsed:: true
+		- hectare
 	- #card 損害；危害 d_n
+	  collapsed:: true
+		- degradation
 	- #card 復原；重建 r_n
+	  collapsed:: true
+		- restoration
 	- #card 使惡化；使加重；使發怒 e_e
+	  collapsed:: true
+		- exacerbate
 	- #card 促進、增進、加速 a_e
+	  collapsed:: true
+		- accelerate
 	- #card 感人的號召；動人的演講
+	  collapsed:: true
+		- clarion call
 	- #card 大規模地
+	  collapsed:: true
+		- at scale
 	- #card 鏟子 s_l
+	  collapsed:: true
+		- shovel
 	- #card 激勵；刺激 m_e
+	  collapsed:: true
+		- motivate
 	- #card 北的；北極的；寒帶針葉林的 b_l
+	  collapsed:: true
+		- boreal
 	- #card 獨特的；特殊的 d_e
+	  collapsed:: true
+		- distinctive
 	- #card 地球的；陸地的 t_l
+	  collapsed:: true
+		- terrestrial
 	- #card 生物族群 b_e
+	  collapsed:: true
+		- biome
 	- #card (使)自動化 a_e
+	  collapsed:: true
+		- automate
 	- #card 地形；地面 t_n
+	  collapsed:: true
+		- terrain
 	- #card 多元的；多樣的 d_e
+	  collapsed:: true
+		- diverse
 	- #card 斜坡；山坡 s_e
+	  collapsed:: true
+		- slope
 	- #card 枯立木 s_g
+	  collapsed:: true
+		- snag
 	- #card 繞過；迴避 b_s
+	  collapsed:: true
+		- bypass
 	- #card 船隊；機隊；車隊 f_t
+	  collapsed:: true
+		- fleet
 	- #card 直達重點
+	  collapsed:: true
+		- get to the point
 	- #card 與…對照之下；而非
+	  collapsed:: true
+		- as opposed to
 	- #card 發芽；成長 g_e
+	  collapsed:: true
+		- germinate
 	- #card 從中作梗；妨礙；使陷於困境 s_e
+	  collapsed:: true
+		- stymie
 	- #card 普遍的；廣泛的 w_e
+	  collapsed:: true
+		- widespread
 	- #card 採用；採納 a_n
+	  collapsed:: true
+		- adoption
 	- #card 演算法；規則系統 a_m
+	  collapsed:: true
+		- algorithm
 	- #card 增補；補充 s_t
+	  collapsed:: true
+		- supplement
 	- #card 再生；新生 r_n
+	  collapsed:: true
+		- regeneration
 	- #card 從頭開始；從零開始
+	  collapsed:: true
+		- from scratch
 	- #card 很多；大量
+	  collapsed:: true
+		- no shortage of
+	- #card 帝國；大企業 e_e
+	- #card 退休 r_t
+	- #card 在活動中的；現役的 a_e
+	- #card 長期的 l_e
+	- #card 增至最大；到最大限度 m_e
+	- #card 太好了；恭喜；加油 h_y
+	- #card 特派員；通訊記者 c_t
+	- #card 概述；簡介 p_e
+	- #card 圖片說明 c_n
+	- #card 表情符號；顏文字 e_i
+	- #card 財富；鉅款 f_e
+	- #card 可以說…
+	- #card 協議；合約 c_t
+	- #card 股本；股份 s_e
+	- #card 少數 m_y
+	- #card 收穫量；收入 t_e
+	- #card 估計；預估 e_e
+	- #card (常複數) 持有股份 h_g
+	- #card 別墅；宅邸；豪宅 m_n
+	- #card 精選的；挑選出來的 s_t
+	- #card 同類的；同伴的 f_w
+	- #card 鉅額；巨量；大部分 b_k
+	- #card (公司、事業等)牢靠的；穩固的 s_d
+	- #card 紅利；股息；股利 d_d
+	- #card
 - # 2022 September
