--- a/journals/2022_08_26.md
+++ b/journals/2022_08_26.md
@@ -17,10 +17,14 @@
 		- 股票價格會變動
 		- 不一定穩定獲利(不一定會發股利、股利發放金額不穩定)
 		- 除息(一年一次)
+		  id:: 630a2acb-49a7-4b3c-9872-a5f267dbc71e
 			- 股價會自動減去股利，以維持總市值不變
 			- e.g.: 股價100，現金股利每股5，除息後股價95
 			- 每一股總市值沒變，只是其中的5變成現金
 		- or 除權(一年一次)
+		  id:: 630a2acb-94ed-451a-bce9-fa20c161ef29
 			- 同理，只是公司發的是股票而非現金，此時一樣要扣掉等值的股價
 		- 填息
+		  id:: 630a2acb-848e-4488-8b7c-d94edc691dda
 			- 若公司營運穩定且持續都有在賺錢的話，通常除息後股價很快就會漲回原本價位
+		- {{embed ((630a3f92-4ae4-4f61-9970-88e5c4ab8c4e))}}
