--- a/journals/2022_09_03.md
+++ b/journals/2022_09_03.md
@@ -75,3 +75,61 @@
 			- 原型
 				- 有的ETF跟股票一樣會配息，有配的話也會除息，因此也是填息後才真正獲得股利
 				- e.g.: 0050每年2月、7月配息
+- #investment #zrbrosfq [股票分析的四個面向](https://www.youtube.com/watch?v=4jRM4Zze7Ng&list=PLrZrfGLGySzcZoVhb4idy5B0XI25ZhnF7&index=24)
+	- 基本、技術、消息、籌碼
+	- 基本面
+		- 巴菲特的價值投資：以基本面為依據的長線投資法
+		- ![image.png](../assets/image_1662474865436_0.png)
+	- 籌碼面
+		- 代表勢力分布
+		- 分析股票的分布狀況，以推測股價未來的變化
+		- 一家公司發行的股數，來自於公司資本額
+			- 慣用通則：每一股10元
+			- e.g.: 資本額100000，就有1000股
+			- 每1000股為1張股票，以「張」為買賣單位
+		- 若籌碼(股票)集中在少數股東手裡，股價相對穩定
+		- 相反地，若籌碼分散在很多人手裡(->股權分散、籌碼凌亂)
+			- 當市場波動、人心慌亂，容易出現有股東跑票便宜賣的情況->公司股價不穩定
+		- ![image.png](../assets/image_1662476049064_0.png)
+	- 技術面
+		- 將各種數據與用數據算出的技術指標用線圖表示
+		- ![image.png](../assets/image_1662476175747_0.png)
+		- 技術分析領域的「理論學派」：道氏理論、艾略特波浪理論、葛蘭碧八大法則
+		- 盡信線不如無線：技術分析是不錯的參考依據但不是100%準確
+	- 消息面
+		- 有真有假，聽聽就好
+	- 基本面最重要，技術面、籌碼面是輔助工具，對消息要小心(除非是做短線、當沖、隔日沖)
+- #investment #zrbrosfq [股市基本面](https://www.youtube.com/watch?v=9Oew02e5uqg&list=PLrZrfGLGySzcZoVhb4idy5B0XI25ZhnF7&index=25)
+	- 基本面最重要
+	- 公司資料(做甚麼)
+		- 資本額(股本)
+			- 股本大->流通的股票數量多->流動性高(容易買也容易賣)->股價穩定
+			- 股本小的公司，股價容易被炒作
+			- 股本 v.s.市值
+				- 資本額=股數x股票面額(10元)
+				- 但把股票拿去市場上做交易，成交價往往隨市場供需高低起伏
+				- 此成交價即為「市價、股價」
+				- 市值=市值股數x股價
+				- 股本不會變，但市值會(隨者股價)而變動
+		- 台股有單日漲跌幅限制：一個交易日內，最多漲跌10%(漲停、跌停)
+		- 美股沒有漲跌幅限制，但有熔斷機制
+		- 看公司基本資料的方法
+			- {{embed ((630cc751-74e5-432e-ac1c-683acca02e5d))}}
+			- 輸入股票代號
+			- 選左邊「基本資料」
+		- 看公司市值、股本排名
+			- 同個網站的「類股一覽」
+			- 上市類股、上市全部
+			- 「資料顯示依據」拉到最後一個「公司基本資料」
+			- 依照股本排序
+	- 經營績效(賺甚麼)
+		- EPS (Earnings per share) 每股稅後盈餘、每股純益
+			- 稅後淨利/股數
+			- 平均每股完稅後還賺多少錢
+			- 上市公司被規定每個月要公布營收、每季要公布財報->EPS通常以季為單位
+			- 年報會在隔年三月公布，這時也差不多會開董事會決定拿EPS中的多少比例出來發股利->盈餘分配率
+			- 看歷年EPS和盈餘分配率
+				- 同個網站的左邊的「股利政策」
+			- 盈餘分配率高的公司適合存股族，相反則可能適合成長型(或波段型)的投資者
+			- 股本膨脹稀釋獲利：若公司持續配發股票股利(一直增加股票數量->股本變大)，但獲利沒有跟著增加->EPS變小(分母變大)
+			- 但EPS無法真實反映公司的獲利能力
