--- a/journals/2023_01_15.md
+++ b/journals/2023_01_15.md
@@ -1,2 +1,2 @@
-- #eda Via Planning in _Simultaneous Pre- and Free-assignment Routing for Multiple Redistribution Layers with Irregular Vias_
-	-
+- #eda _[Simultaneous Pre- and Free-assignment Routing for Multiple Redistribution Layers with Irregular Vias](https://ieeexplore.ieee.org/document/9586296)_
+	- ![IMG_0573.PNG](../assets/IMG_0573_1673922368459_0.PNG)
