--- a/journals/2023_01_14.md
+++ b/journals/2023_01_14.md
@@ -1,31 +1,26 @@
 - #eda Some improvements
 	- Partition: CDT?
-		- VD:
+		- VD
 			- https://upload.wikimedia.org/wikipedia/commons/d/d9/Voronoi_growth_euclidean.gif
 			- more irregular
 			- many cross-tile edges in a tile
 				- more difficult crossing-aware search
+				- chord-based model may be more appropriate
 			- only one via in each tile
 				- can insert more
-		- Includes circles?
-			- more simple capacity model(?)
-			- issue
-				- cannot cover the whole routing area
-				- crossing-aware implementation between circles
-			- example
-				- inscribed circles of DT
-				- ![IMG_0572.jpeg](../assets/IMG_0572_1673922301921_0.jpeg)
 		- [Acute Triagulation](https://web.ntnu.edu.tw/~algo/Triangulation.html)
 	- Via planning: flexible
+	  collapsed:: true
 		- Insert vias only, then move some
 		- Insert both dummy and vias, then decide whether a dummy should be a via in the later stage
 			- e.g. net order adjustment stage
 	- Capacity model:
 		- Obtuse angle
 		- Feasibility (Whether success in GR guarantees success in DR)
-			-
 		- Back tracing (What happens before the via?)
 	- Net order (in GR)
 	- Congestion cost
 	- Re-DT after GR (must-do)
 	- DP order (in DR)
+- #eda [Partitioning Method](https://www.csun.edu/~ctoth/Handbook/chap29.pdf)
+  id:: 63c651dc-e625-4a28-b9ad-4e8fb5caf8f9
