--- a/journals/2023_01_14.md
+++ b/journals/2023_01_14.md
@@ -1,5 +1,6 @@
 - #eda Some improvements
 	- Partition: CDT?
+	  collapsed:: true
 		- VD
 			- https://upload.wikimedia.org/wikipedia/commons/d/d9/Voronoi_growth_euclidean.gif
 			- more irregular
@@ -15,6 +16,7 @@
 		- Insert both dummy and vias, then decide whether a dummy should be a via in the later stage
 			- e.g. net order adjustment stage
 	- Capacity model:
+	  collapsed:: true
 		- Obtuse angle
 		- Feasibility (Whether success in GR guarantees success in DR)
 		- Back tracing (What happens before the via?)
