--- a/journals/2023_01_14.md
+++ b/journals/2023_01_14.md
@@ -15,8 +15,8 @@
 		- Insert vias only, then move some
 		- Insert both dummy and vias, then decide whether a dummy should be a via in the later stage
 			- e.g. net order adjustment stage
+		- Insert vias later
 	- Capacity model:
-	  collapsed:: true
 		- Obtuse angle
 		- Feasibility (Whether success in GR guarantees success in DR)
 		- Back tracing (What happens before the via?)
